[package]
name = "rs-khl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
thiserror = "1"
futures-util = { version = "0.3", features = ["sink"] }
